2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.Odbc.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.Odbc.addin.xml: Updated add-in category and
	  description.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.Odbc.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.Odbc.addin.xml,
	  MonoDevelop.Database.Sql.Odbc.mdp: Directory reorganization.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.Odbc.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.Odbc.mdp: Project file names updated by change in
	  MD path functions.

2007-09-26  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Database.Sql.Odbc.mdp: Don't unnecessarily local-copy project
	  references.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.Odbc.addin.xml: Bump MD version.

2007-07-10  Ben Motmans <ben.motmans@gmail.com>

	* OdbcConnectionProvider.cs: set IsConnectionError property

2007-07-05  Ben Motmans <ben.motmans@gmail.com>

	* OdbcConnectionProvider.cs: ExecuteQueryAsDataSet and ExecuteQueryAsDataTable implementation
	* OdbcDbFactory.cs: specified the ISqlDialect and added default connection settings

2007-07-02  Ben Motmans <ben.motmans@gmail.com>

	* OdbcSchemaProvider.cs: 
	Imported the old DbProvider and updated all to code to use the new API

2007-07-01  Ben Motmans <ben.motmans@gmail.com>

	* OdbcSchemaProvider.cs: 
	* OdbcDbFactory.cs: 
	* OdbcConnectionProvider.cs: 
	Imported original code and splitted in 3 classes