@@ -18,7 +18,7 @@
 		<Addin id="MonoDevelop.Database.Sql" version="0.19.0"/>
 	</Dependencies>
 
-	<Extension path = "/Mono/Data/Sql">
-		<Class id = "Odbc" class = "MonoDevelop.Database.Sql.OdbcDbFactory"/>
+	<Extension path = "/MonoDevelop/Database/Sql">
+		<DatabaseFactory id = "Odbc" class = "MonoDevelop.Database.Sql.Npgsql.OdbcDbFactory" />
 	</Extension>
 </Addin>
