@@ -16,14 +16,20 @@
   <Contents>
     <File name="OdbcConnectionProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="OdbcSchemaProvider.cs" subtype="Code" buildaction="Compile" />
-    <File name="MonoDevelop.Database.Sql.Odbc.addin.xml" subtype="Code" buildaction="FileCopy" />
+    <File name="MonoDevelop.Database.Sql.Odbc.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="OdbcDbFactory.cs" subtype="Code" buildaction="Compile" />
-    <File name="Schema" subtype="Directory" buildaction="Compile" />
+    <File name="OdbcPooledDbConnection.cs" subtype="Code" buildaction="Compile" />
+    <File name="OdbcDialect.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Database.Sql" />
+    <ProjectReference type="Gac" localcopy="True" refto="MonoDevelop.Ide, Version=0.19.0.0, Culture=neutral, PublicKeyToken=null" />
+    <ProjectReference type="Gac" localcopy="True" refto="MonoDevelop.Core, Version=0.19.0.0, Culture=neutral, PublicKeyToken=null" />
+    <ProjectReference type="Gac" localcopy="True" refto="MonoDevelop.Core.Gui, Version=0.19.0.0, Culture=neutral, PublicKeyToken=null" />
+    <ProjectReference type="Gac" localcopy="True" refto="MonoDevelop.Components, Version=0.19.0.0, Culture=neutral, PublicKeyToken=null" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Database.Components" />
   </References>
   <Deployment.LinuxDeployData generatePcFile="False" />
 </Project>
